--- a/_sass/fp-performance.scss
+++ b/_sass/fp-performance.scss
@@ -2,78 +2,73 @@
 
 }
 
+.fp-performances header {
+  font-family: $fiftyRegular;
+  margin: 100px 0;
+  & h1 {
+    margin: 0 0 0 50%;
+    background-color: black;
+    display: inline-block;
+    font-size: $largeFont;
+  }
+}
+
 .fp-performance {
+  position: relative;
   margin: 20px 50px 20px 50%;
   height: auto;
   background: $blue;
   padding: 50px 50px 70px 35px;
 
-  h2, h3, p, li {
-    font-family: $texGyreItalic;
-    font-weight: normal;
+  & h2, h3, p, li {
     font-size: $descriptionFontSize;
   }
   
-  &h1 {
+  & h1 {
     font-family: $fiftyRegular;
     font-size: 30px;
     margin: 0 0 20px 0;
   }
 
-  &h3 {
-    // display: inline-block;
+  & h3 {
+    margin: 0;
+    float: left;
+  }
+
+  & h3:after {
+    content: "\00a0";
+  }
+
+  & p {
+    display: inline;
     margin: 0;
   }
 
-  &p {
-    display: inline-block;
-    margin: 0;
-  }
-
-  &ul {
+  & ul {
     list-style: none;
     padding: 0;
     display: inline-block;
   }
-  &h2 {
+  & h2 {
     display: inline-block;
   }
-  &li {
+  & li {
     display: inline;
   }
-  &li + li:before {
+
+  & li + li:before {
     content: ", ";
   }
 }
 
-
-//this stuff doesn't really work
-//need to figure out a better way to locate the media
-//and also a way to center the image in the div without cropping it
 .fp-performance-media {
   position: absolute;
-  left: 10%;
+  transform: translate(-100%,0);
+  left: -40px;
+  top: 0;
   overflow: hidden;
-  width: 400px;
-  height: 400px;
-
-  // img, iframe {
-  //   position: absolute;
-  //   left: 0;
-  //   right: 0;
-  //   top: 0;
-  //   bottom:0;
-  // }
-
-  // img {
-  //   height: 100%;
-  //   width: auto;
-  //   min-width: 100%;
-  //   min-height: 100%;
-  //   transform: translate(-50%, -50%);
-  //   top: 50%;
-  //   left: 50%;
-  // }
+  width: 32vw;
+  height: 16vw;
 }
 
 .fp-performance-image {
