--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,8 +1,9 @@
 $header-font: 35px;
 
 .header {
-  font-family: "FiftyTrial-Regular", Arial, sans-serif;
+  font-family: $fiftyRegular;
   font-style: normal;
+  color: black;
   & nav {
     width: 100%;
     height: 120px;
@@ -17,7 +18,6 @@ $header-font: 35px;
   & h1 {
     margin: auto 70px;
     font-size: $header-font;
-    font-weight: normal;
   }
   & li {
     display:inline;
@@ -28,7 +28,6 @@ $header-font: 35px;
     margin: auto 40px auto 0;
   }
   & a:link, a:visited {
-    color: #000000;
-
+    color: black;
   }
 }
