--- a/_sass/marquee.scss
+++ b/_sass/marquee.scss
@@ -8,8 +8,7 @@
   height: 100%;
   width: 200%;
   background-color: black;
-  font-family: $texGyreItalic;
-  font-size: 50px;
+  font-size: $largeFont;
   display: block;
   position: absolute;
   overflow: hidden;
